--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.1",
     "mongoose": "^4.12.0",
+    "path": "^0.12.7",
     "request": "^2.83.0"
   }
 }
